--- a/Hospital.WPF/Controls/NotificationArea.xaml
+++ b/Hospital.WPF/Controls/NotificationArea.xaml
@@ -50,7 +50,7 @@
         </Style>
     </UserControl.Style>
     <Grid>
-        <TextBlock Text="{Binding Path=(notificator:NotificationManager.Message), Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+        <TextBlock Margin="100 20" Text="{Binding Path=(notificator:NotificationManager.Message), Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                    FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="WrapWithOverflow"/>
         <Button x:Name="test" Content="close" Height="30" Width="50" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,50,0" Click="Button_Click" Background="Transparent" Foreground="White"/>
         <Path VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50,0,0,0" Stretch="Uniform" Width="35" Height="35">
