--- a/Hospital.WPF/Resources/Buttons.xaml
+++ b/Hospital.WPF/Resources/Buttons.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:view="clr-namespace:Hospital.WPF.Views"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
@@ -23,6 +24,10 @@
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="Background" Value="Transparent"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Visibility" Value="Collapsed"/>
+                <Setter Property="IsChecked" Value="False"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -171,8 +176,8 @@
                 <Setter Property="Opacity" TargetName="DisabledVisualElement" Value="0.5"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Opacity" TargetName="DisabledVisualElement" Value="0.8"/>
-                <Setter Property="Opacity" TargetName="PART_ContentPresenter" Value="0.6"/>
+                <Setter Property="Opacity" TargetName="DisabledVisualElement" Value="0"/>
+                <Setter Property="Opacity" TargetName="PART_ContentPresenter" Value="0.5"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
