--- a/Hospital.WPF/Resources/DataGrids.xaml
+++ b/Hospital.WPF/Resources/DataGrids.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:behavior="clr-namespace:Hospital.WPF.Resources.Behaviors"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="DataGridColumnHeader.Common" TargetType="{x:Type DataGridColumnHeader}">
@@ -174,6 +175,7 @@
     <Style x:Key="dg_Ambulatory" TargetType="{x:Type DataGrid}" BasedOn="{StaticResource DataGrid.Common}">
         <Setter Property="CellStyle" Value="{StaticResource DataGridCell.Ambulatory}"/>
         <Setter Property="RowStyle" Value="{StaticResource DataGridRow.Ambulatory}"/>
+        <Setter Property="behavior:IgnoreMouseWheelBehavior.IgnoreMouseWheel" Value="True"/>
         <Style.Triggers>
             <Trigger Property="HasItems" Value="False">
                 <Setter Property="Visibility" Value="Collapsed"/>
