--- a/Hospital.WPF/Controls/Registrator/RegEditPanel.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegEditPanel.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
+             xmlns:val="clr-namespace:Hospital.WPF.Services.Validators"
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
@@ -63,13 +64,36 @@
         <TextBlock Text="РЕДАКТИРОВАТЬ" Foreground="White" Grid.Row="0" Grid.ColumnSpan="2" FontWeight="DemiBold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <StackPanel Orientation="Vertical" Grid.Row="1" Margin="20 10 10 10">
-            
             <TextBlock Text="Фамилия"/>
-            <TextBox Text="{Binding EditingPatient.FirstName}" mah:TextBoxHelper.Watermark="Введите фамилию"/>
+            <TextBox mah:TextBoxHelper.Watermark="Введите фамилию" x:Name="tb_firstName">
+                <TextBox.Text>
+                    <Binding Path="EditingPatient.FirstName">
+                        <Binding.ValidationRules>
+                            <val:ProperNounRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Имя"/>
-            <TextBox Text="{Binding EditingPatient.MidName}" mah:TextBoxHelper.Watermark="Введите имя"/>
+            <TextBox mah:TextBoxHelper.Watermark="Введите имя" x:Name="tb_midName">
+                <TextBox.Text>
+                    <Binding Path="EditingPatient.MidName">
+                        <Binding.ValidationRules>
+                            <val:ProperNounRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Отчество"/>
-            <TextBox Text="{Binding EditingPatient.LastName}" mah:TextBoxHelper.Watermark="Введите отчество"/>
+            <TextBox mah:TextBoxHelper.Watermark="Введите отчество" x:Name="tb_lastName">
+                <TextBox.Text>
+                    <Binding Path="EditingPatient.LastName">
+                        <Binding.ValidationRules>
+                            <val:ProperNounRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -81,7 +105,15 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="Дата рождения" Grid.Row="0" Grid.Column="0"/>
-                <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{Binding EditingPatient.BirthDay}" Margin="0,0,5,5"/>
+                <DatePicker Grid.Row="1" Grid.Column="0" Margin="0,0,5,5">
+                    <DatePicker.SelectedDate>
+                        <Binding Path="EditingPatient.BirthDay">
+                            <Binding.ValidationRules>
+                                <val:BirthDateRule/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </DatePicker.SelectedDate>
+                </DatePicker>
                 
                 <TextBlock Text="Пол" Grid.Row="0" Grid.Column="1" Margin="10,0,0,2"/>
                 <ComboBox Grid.Row="1" Grid.Column="1" Margin="5,0,0,5"
@@ -96,12 +128,28 @@
                         DisplayMemberPath="Title"
                         SelectedValuePath="Title"
                         SelectedItem="{Binding EditingPatient.Belay}"/>
-            <TextBlock Text="Номер ОМС" Grid.Row="2" Grid.ColumnSpan="2"/>  
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding  EditingPatient.BelayCode}"/>
+            <TextBlock Text="Номер ОМС" Grid.Row="2" Grid.ColumnSpan="2"/>
+            <TextBox Grid.Row="3" Grid.Column="1" IsEnabled="{Binding EditingPatient.Belay, Converter={StaticResource NullToBoolConverter}}">
+                <TextBox.Text>
+                    <Binding Path="EditingPatient.BelayCode">
+                        <Binding.ValidationRules>
+                            <val:NumericLenghtRule Min="7" Max="7"/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10 10 20 10">
             <TextBlock Text="Номер телефона 1"/>
-            <TextBox Text="{Binding EditingPatient.PhoneNumber}"/>
+            <TextBox x:Name="tb_phoneNum">
+                <TextBox.Text>
+                    <Binding Path="EditingPatient.PhoneNumber">
+                        <Binding.ValidationRules>
+                            <val:NumericLenghtRule Min="5" Max="11"/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Номер телефона 2"/>
             <TextBox IsEnabled="False"/>
             <Grid>
@@ -115,7 +163,7 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0"  Text="Город" />
+                <TextBlock Grid.Row="0" Grid.Column="0"  Text="Населенный пункт" />
                 <TextBox Grid.Row="1" Grid.Column="0" Text="{Binding EditingPatient.Adress.City}" Margin="0,0,5,5"/>
                 <TextBlock Grid.Row="0" Grid.Column="1" Text="Улица" Margin="10,0,0,2" />
                 <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding EditingPatient.Adress.Street}" Margin="5,0,0,5"/>
@@ -126,13 +174,33 @@
             </Grid>
             <TextBlock Text="Семейное положение"/>
             <ComboBox>
-                <ComboBoxItem Content="Состоит" IsSelected="{Binding EditingPatient.IsMarried}"/>
-                <ComboBoxItem Content="Не состоит"/>
+                <ComboBoxItem Content="Состоит в браке" IsSelected="{Binding EditingPatient.IsMarried, UpdateSourceTrigger=PropertyChanged}"/>
+                <ComboBoxItem Content="Не состоит в браке">
+                    <ComboBoxItem.Style>
+                        <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource MahApps.Styles.ComboBoxItem}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding EditingPatient.IsMarried, Mode=OneWay}" Value="false">
+                                    <Setter Property="IsSelected" Value="True"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ComboBoxItem.Style>
+                </ComboBoxItem>
             </ComboBox>
             <TextBlock Text="Наличие детей"/>
             <ComboBox>
-                <ComboBoxItem Content="Имеет" IsSelected="{Binding EditingPatient.HasChild}"/>
-                <ComboBoxItem Content="Не имеет"/>
+                <ComboBoxItem Content="Имеет" IsSelected="{Binding EditingPatient.HasChild, UpdateSourceTrigger=PropertyChanged}"/>
+                <ComboBoxItem Content="Не имеет">
+                    <ComboBoxItem.Style>
+                        <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource MahApps.Styles.ComboBoxItem}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding EditingPatient.HasChild, Mode=OneWay}" Value="false">
+                                    <Setter Property="IsSelected" Value="True"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ComboBoxItem.Style>
+                </ComboBoxItem>
             </ComboBox>
         </StackPanel>
 
@@ -150,7 +218,7 @@
                         <TextBlock Text="ОТМЕНА"/>
                     </StackPanel>
                 </Button>
-                <Button HorizontalAlignment="Right" Style="{StaticResource Button.PathWithText}" Padding="5 0"
+                <Button HorizontalAlignment="Right" Padding="5 0"
                         Foreground="{StaticResource BrushForegroundLight}" BorderThickness="0,0,5,0" BorderBrush="Transparent"
                         mah:ItemHelper.HoverForegroundBrush="{StaticResource Brush.AccentGreen}"
                         mah:ControlsHelper.FocusBorderBrush="{StaticResource Brush.AccentGreen}"
@@ -159,6 +227,22 @@
                         <Path Data="{StaticResource path.Save}" Margin="8"/>
                         <TextBlock Text="СОХРАНИТЬ"/>
                     </StackPanel>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Button.PathWithText}">
+                            <Setter Property="IsEnabled" Value="False"/>
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding ElementName=tb_firstName, Mode=OneWay, Path=(Validation.HasError)}" Value="false"/>
+                                        <Condition Binding="{Binding ElementName=tb_midName, Mode=OneWay, Path=(Validation.HasError)}" Value="false"/>
+                                        <Condition Binding="{Binding ElementName=tb_lastName, Mode=OneWay, Path=(Validation.HasError)}" Value="false"/>
+                                        <Condition Binding="{Binding ElementName=tb_phoneNum, Mode=OneWay, Path=(Validation.HasError)}" Value="false"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="IsEnabled" Value="True"/>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
                 </Button>
             </Grid>
         </Border>
