--- a/Hospital.WPF/Resources/Converters.xaml
+++ b/Hospital.WPF/Resources/Converters.xaml
@@ -1,13 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:ser="clr-namespace:Hospital.WPF.Services"
+                    xmlns:converters="clr-namespace:Hospital.WPF.Services.Converters"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <ser:ToUpperCaseConverter x:Key="ToUpperCaseConverter"/>
-    <ser:ObjectEqualsToBoolConverter x:Key="ObjectEqualsToBoolConverter"/>
-    <ser:MultiCommandExecuter x:Key="MultiCommandExecuter"/>
-    <ser:MultiBooleanToVisibilityConverter x:Key="MultiBooleanToVisibilityConverter"/>
-    <ser:DateToAgeConverter x:Key="DateToAgeConverter"/>
-    <ser:ObjectNullToBoolConverter x:Key="NullToBoolConverter"/>
-    <ser:EnumValueToIndexConverter x:Key="EnumValueToIndexConverter"/>
+    <converters:ToUpperCaseConverter x:Key="ToUpperCaseConverter"/>
+    <converters:ObjectEqualsToBoolConverter x:Key="ObjectEqualsToBoolConverter"/>
+    <converters:MultiCommandExecuter x:Key="MultiCommandExecuter"/>
+    <converters:MultiBooleanToVisibilityConverter x:Key="MultiBooleanToVisibilityConverter"/>
+    <converters:DateToAgeConverter x:Key="DateToAgeConverter"/>
+    <converters:ObjectNullToBoolConverter x:Key="NullToBoolConverter"/>
+    <converters:EnumValueToIndexConverter x:Key="EnumValueToIndexConverter"/>
+    <converters:TimeSpanToDurationConverter x:Key="DurationConverter"/>
+    <converters:RowDisablingConverter x:Key="MyRowConverter"/>
+    <converters:DiameterToLenghtConverter x:Key="DiameterToLenghtConverter"/>
+    <converters:ScheduleRowCountConverter x:Key="ScheduleRowCountConverter"/>
+
 
 </ResourceDictionary>
