--- a/Hospital.WPF/Themes/Generic.xaml
+++ b/Hospital.WPF/Themes/Generic.xaml
@@ -1,8 +1,8 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:Hospital.WPF.Services"
     xmlns:parts="clr-namespace:Hospital.WPF.Resources.Parts"
+    xmlns:converters="clr-namespace:Hospital.WPF.Services.Converters"
     xmlns:local="clr-namespace:Hospital.WPF">
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -14,7 +14,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type parts:LoadingSpinner}">
                     <ControlTemplate.Resources>
-                        <converters:DiameterToLenghtConverter x:Key="toLenghtMultiConverter"/>
+                        <converters:DiameterToLenghtConverter x:Key="DiameterToLenghtConverter"/>
                     </ControlTemplate.Resources>
                     <Border CornerRadius="{TemplateBinding BorderCornerRadius}"
                             Background="{TemplateBinding Background}"
@@ -28,7 +28,7 @@
                                  StrokeDashCap="{TemplateBinding LineCap}"
                                  Visibility="{TemplateBinding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Ellipse.StrokeDashArray>
-                                <MultiBinding Converter="{StaticResource toLenghtMultiConverter}">
+                                <MultiBinding Converter="{StaticResource DiameterToLenghtConverter}">
                                     <Binding RelativeSource="{RelativeSource Mode=TemplatedParent}" Path="Diameter"/>
                                     <Binding RelativeSource="{RelativeSource Mode=TemplatedParent}" Path="Thickness"/>
                                 </MultiBinding>
@@ -47,7 +47,7 @@
                                         <Storyboard>
                                             <DoubleAnimation Duration="0:0:1" Storyboard.TargetProperty="StrokeDashOffset" DecelerationRatio="0.4" IsCumulative="True" RepeatBehavior="Forever">
                                                 <DoubleAnimation.By>
-                                                    <MultiBinding Converter="{StaticResource toLenghtMultiConverter}" ConverterParameter="True">
+                                                    <MultiBinding Converter="{StaticResource DiameterToLenghtConverter}" ConverterParameter="True">
                                                         <Binding RelativeSource="{RelativeSource Mode=TemplatedParent}" Path="Diameter"/>
                                                         <Binding RelativeSource="{RelativeSource Mode=TemplatedParent}" Path="Thickness"/>
                                                     </MultiBinding>
