Login replace from controls to view

--- a/Hospital.WPF/Views/Login.xaml
+++ b/Hospital.WPF/Views/Login.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Hospital.WPF.Controls.LoginControl" x:Name="LoginControlControl"
+﻿<UserControl x:Class="Hospital.WPF.Views.Login" x:Name="LoginControlControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
