--- a/Hospital.WPF/App.xaml
+++ b/Hospital.WPF/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Hospital.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Hospital.WPF"
-             StartupUri="Views/Main.xaml">
+             xmlns:local="clr-namespace:Hospital.WPF">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
