WPF Authentication as IPrinciple, authenticat etc

--- a/Hospital.ASP/Views/_ViewImports.cshtml
+++ b/Hospital.ASP/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using Hospital.Domain
+﻿@using Hospital.Domain.Model
 @using Hospital.ViewModel
 @using Hospital.ASP
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
